[build-system]
requires = ['setuptools', 'wheel']

[project]
name = 'carson'
authors = [{name = 'Michael Loyd', email = 'michael@loyd.org'}]
urls = {url='https://github.com/mloyd/carson'}
readme = 'README.md'
requires-python = '>=3.8'
license = {text = 'MIT'}
dependencies = ['aiohttp']
keywords = ['tesla', 'asyncio', 'json']
dynamic = [
  'version',
  'description'  # Careful!  Some weird stuff is happening here.
                 # See tool.setuptools.dynamic.description for your next clue.
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',]

[tool.setuptools.packages.find]
include = ['carson*']
exclude = ['carson.version']

[tool.setuptools.dynamic]
version = {attr = 'carson.version.pep440_public'}

# See carson.version.pep440_public for how/why `build-description.log` is built!
# Be prepared to laugh!
description = {file = 'build-description.log'}
