[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel>=0.41.2"]
# Versions of setuptools >=64.0.0 do not require extra minimal setup.py file.

[project]
name = "carson"
authors = [{name = "Michael Loyd", email = "michael@loyd.org"}]
urls = {url="https://github.com/mloyd/carson"}
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = ["aiohttp"]
keywords = ["tesla", "asyncio", "json"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
# If you want carson to refresh your tokens, you will need to include these.
jwt = ["pyjwt", "cryptography"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"

[tool.setuptools.dynamic]
version = {attr = "_version.pep440_public"}

# Careful! This populates the 'Summary' metadata field... not 'description'.
description = {file = "build/build-description-summary.log"}

[tool.setuptools.packages.find]
where = ["src"]
include = ['carson*']
exclude = ['carson.version*']
